err/redsolutioncms.django-chunks.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chunks'...
Listing './lib/python3.5/site-packages/chunks/migrations'...
Listing './lib/python3.5/site-packages/chunks/redsolution_setup'...
Listing './lib/python3.5/site-packages/chunks/redsolution_setup/templates'...
Listing './lib/python3.5/site-packages/chunks/redsolution_setup/templates/chunks'...
Listing './lib/python3.5/site-packages/chunks/redsolution_setup/templates/chunks/redsolutioncms'...
Listing './lib/python3.5/site-packages/chunks/templatetags'...
Compiling './lib/python3.5/site-packages/chunks/templatetags/chunks.py'...
***   File "./lib/python3.5/site-packages/chunks/templatetags/chunks.py", line 24
    raise template.TemplateSyntaxError, "%r tag should have either 2 or 3 arguments" % (tokens[0],)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redsolutioncms.django_chunks-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
